--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fantasy Basketball Stats - Login</title>
+  <title>Ibby's Fantasy Basketball App - Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
   <div class="container login-container">
     <div class="login-card">
       <div class="login-header">
-        <h1>Fantasy Basketball Stats</h1>
+        <h1>Ibby's Fantasy Basketball App</h1>
       </div>
       <div class="login-content">
         {% if logged_in %}
